# gr-demo-3dgen

./: .gitignore  README.md  main.py  pyproject.toml
public/: vad.js
src/gr_demo_3dgen/: comfy.py  groq.py  utils.py
src/gr_demo_3dgen/prompts/: sketch23d_api_faster.json
